# tTek-language

./: .gitignore  CMakeLists.txt  README.md  compile.bat  syntax_0_1.txt
examples/: function_test.ttek  hello.ttek  pointer_test.ttek  smart_home.ttek  system.ttek  wait.ttek
src/: main.cpp
src/codegen/: CodeGenLLVM.cpp  CodeGenLLVM.hpp
src/lexer/: Lexer.cpp  Lexer.hpp  Token.hpp
src/parser/: AST.hpp  Parser.cpp  Parser.hpp
